fixed some more spacing around the app and alignment between components

--- a/src/style/app.css
+++ b/src/style/app.css
@@ -8,7 +8,7 @@
 }
 
 .left_container {
-    margin-right: 10px;
+    margin-right: 20px;
     flex:35%;
     height:100%;
     border:2px solid black;
