--- a/src/style/cityList.css
+++ b/src/style/cityList.css
@@ -1,6 +1,7 @@
 .city_list_container {
     height:100%;
     position:relative;
+    margin:12px;
 }
 
 .container_title {
@@ -10,7 +11,7 @@
     border-bottom: 1px solid grey;
     padding-bottom:5px;
     padding-left: 10px;
-    margin: 10px 0 0 0;
+    margin: 0;
     height:2%;
 }
 
@@ -19,10 +20,12 @@
 }
 
 .clear_city_btn {
-    font-family: 'Times New Roman', Times, serif;
+    font-family: Arial, Helvetica, sans-serif !important;
+    text-transform:none !important;
     font-size: 12px;
-    background-color: grey;
+    background-color: lightgrey !important;
     position:absolute !important;
     bottom:0;
-    right:5%;
+    right:0;
+    width: 10em;
 }
