--- a/src/style/dailyInfo.css
+++ b/src/style/dailyInfo.css
@@ -2,6 +2,6 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    margin-right:15px;
+    margin-right:20px;
 }
 
